--- a/champagne_capsules_app/package.json
+++ b/champagne_capsules_app/package.json
@@ -21,6 +21,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.3",
     "expo-navigation-bar": "~1.1.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.11",
@@ -28,6 +29,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
